crates/emacs-module/src/emacs-module.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type intmax_t = i64;
pub type __time_t = i64;
pub type __syscall_slong_t = ::std::os::raw::c_long;

pub type emacs_finalizer_function = ::std::option::Option<
    unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void),
>;
pub type emacs_env = emacs_env_25;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct emacs_value_tag {
    _unused: [u8; 0],
}
pub type emacs_value = *mut emacs_value_tag;
pub const emacs_variadic_function: emacs_arity = -2;
pub type emacs_arity = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct emacs_runtime {
    pub size: isize,
    pub private_members: *mut emacs_runtime_private,
    pub get_environment: ::std::option::Option<
        unsafe extern "C" fn(ert: *mut emacs_runtime) -> *mut emacs_env,
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of emacs_runtime"][::std::mem::size_of::<emacs_runtime>() - 24usize];
    ["Alignment of emacs_runtime"][::std::mem::align_of::<emacs_runtime>() - 8usize];
    [
        "Offset of field: emacs_runtime::size",
    ][::std::mem::offset_of!(emacs_runtime, size) - 0usize];
    [
        "Offset of field: emacs_runtime::private_members",
    ][::std::mem::offset_of!(emacs_runtime, private_members) - 8usize];
    [
        "Offset of field: emacs_runtime::get_environment",
    ][::std::mem::offset_of!(emacs_runtime, get_environment) - 16usize];
};
pub type emacs_init_function = ::std::option::Option<
    unsafe extern "C" fn(ert: *mut emacs_runtime) -> ::std::os::raw::c_int,
>;
pub type emacs_subr = ::std::option::Option<
    unsafe extern "C" fn(
        env: *mut emacs_env,
        nargs: isize,
        args: *mut emacs_value,
        data: *mut ::std::os::raw::c_void,
    ) -> emacs_value,
>;
pub const emacs_funcall_exit_return: emacs_funcall_exit = 0;
pub const emacs_funcall_exit_signal: emacs_funcall_exit = 1;
pub const emacs_funcall_exit_throw: emacs_funcall_exit = 2;
pub type emacs_funcall_exit = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct emacs_env_25 {
    pub size: isize,
    pub private_members: *mut emacs_env_private,
    pub make_global_ref: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            any_reference: emacs_value,
        ) -> emacs_value,
    >,
    pub free_global_ref: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, global_reference: emacs_value),
    >,
    pub non_local_exit_check: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env) -> emacs_funcall_exit,
    >,
    pub non_local_exit_clear: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env),
    >,
    pub non_local_exit_get: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            non_local_exit_symbol_out: *mut emacs_value,
            non_local_exit_data_out: *mut emacs_value,
        ) -> emacs_funcall_exit,
    >,
    pub non_local_exit_signal: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            non_local_exit_symbol: emacs_value,
            non_local_exit_data: emacs_value,
        ),
    >,
    pub non_local_exit_throw: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, tag: emacs_value, value: emacs_value),
    >,
    pub make_function: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            min_arity: isize,
            max_arity: isize,
            function: ::std::option::Option<
                unsafe extern "C" fn(
                    env: *mut emacs_env,
                    nargs: isize,
                    args: *mut emacs_value,
                    arg1: *mut ::std::os::raw::c_void,
                ) -> emacs_value,
            >,
            documentation: *const ::std::os::raw::c_char,
            data: *mut ::std::os::raw::c_void,
        ) -> emacs_value,
    >,
    pub funcall: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            function: emacs_value,
            nargs: isize,
            args: *mut emacs_value,
        ) -> emacs_value,
    >,
    pub intern: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            symbol_name: *const ::std::os::raw::c_char,
        ) -> emacs_value,
    >,
    pub type_of: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, value: emacs_value) -> emacs_value,
    >,
    pub is_not_nil: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, value: emacs_value) -> bool,
    >,
    pub eq: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, a: emacs_value, b: emacs_value) -> bool,
    >,
    pub extract_integer: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, value: emacs_value) -> intmax_t,
    >,
    pub make_integer: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, value: intmax_t) -> emacs_value,
    >,
    pub extract_float: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, value: emacs_value) -> f64,
    >,
    pub make_float: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, value: f64) -> emacs_value,
    >,
    pub copy_string_contents: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            value: emacs_value,
            buffer: *mut ::std::os::raw::c_char,
            size_inout: *mut isize,
        ) -> bool,
    >,
    pub make_string: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            contents: *const ::std::os::raw::c_char,
            length: isize,
        ) -> emacs_value,
    >,
    pub make_user_ptr: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            fin: emacs_finalizer_function,
            ptr: *mut ::std::os::raw::c_void,
        ) -> emacs_value,
    >,
    pub get_user_ptr: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            uptr: emacs_value,
        ) -> *mut ::std::os::raw::c_void,
    >,
    pub set_user_ptr: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            uptr: emacs_value,
            ptr: *mut ::std::os::raw::c_void,
        ),
    >,
    pub get_user_finalizer: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            uptr: emacs_value,
        ) -> emacs_finalizer_function,
    >,
    pub set_user_finalizer: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            uptr: emacs_value,
            fin: emacs_finalizer_function,
        ),
    >,
    pub vec_get: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            vec: emacs_value,
            i: isize,
        ) -> emacs_value,
    >,
    pub vec_set: ::std::option::Option<
        unsafe extern "C" fn(
            env: *mut emacs_env,
            vec: emacs_value,
            i: isize,
            val: emacs_value,
        ),
    >,
    pub vec_size: ::std::option::Option<
        unsafe extern "C" fn(env: *mut emacs_env, vec: emacs_value) -> isize,
    >,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of emacs_env_25"][::std::mem::size_of::<emacs_env_25>() - 232usize];
    ["Alignment of emacs_env_25"][::std::mem::align_of::<emacs_env_25>() - 8usize];
    [
        "Offset of field: emacs_env_25::size",
    ][::std::mem::offset_of!(emacs_env_25, size) - 0usize];
    [
        "Offset of field: emacs_env_25::private_members",
    ][::std::mem::offset_of!(emacs_env_25, private_members) - 8usize];
    [
        "Offset of field: emacs_env_25::make_global_ref",
    ][::std::mem::offset_of!(emacs_env_25, make_global_ref) - 16usize];
    [
        "Offset of field: emacs_env_25::free_global_ref",
    ][::std::mem::offset_of!(emacs_env_25, free_global_ref) - 24usize];
    [
        "Offset of field: emacs_env_25::non_local_exit_check",
    ][::std::mem::offset_of!(emacs_env_25, non_local_exit_check) - 32usize];
    [
        "Offset of field: emacs_env_25::non_local_exit_clear",
    ][::std::mem::offset_of!(emacs_env_25, non_local_exit_clear) - 40usize];
    [
        "Offset of field: emacs_env_25::non_local_exit_get",
    ][::std::mem::offset_of!(emacs_env_25, non_local_exit_get) - 48usize];
    [
        "Offset of field: emacs_env_25::non_local_exit_signal",
    ][::std::mem::offset_of!(emacs_env_25, non_local_exit_signal) - 56usize];
    [
        "Offset of field: emacs_env_25::non_local_exit_throw",
    ][::std::mem::offset_of!(emacs_env_25, non_local_exit_throw) - 64usize];
    [
        "Offset of field: emacs_env_25::make_function",
    ][::std::mem::offset_of!(emacs_env_25, make_function) - 72usize];
    [
        "Offset of field: emacs_env_25::funcall",
    ][::std::mem::offset_of!(emacs_env_25, funcall) - 80usize];
    [
        "Offset of field: emacs_env_25::intern",
    ][::std::mem::offset_of!(emacs_env_25, intern) - 88usize];
    [
        "Offset of field: emacs_env_25::type_of",
    ][::std::mem::offset_of!(emacs_env_25, type_of) - 96usize];
    [
        "Offset of field: emacs_env_25::is_not_nil",
    ][::std::mem::offset_of!(emacs_env_25, is_not_nil) - 104usize];
    [
        "Offset of field: emacs_env_25::eq",
    ][::std::mem::offset_of!(emacs_env_25, eq) - 112usize];
    [
        "Offset of field: emacs_env_25::extract_integer",
    ][::std::mem::offset_of!(emacs_env_25, extract_integer) - 120usize];
    [
        "Offset of field: emacs_env_25::make_integer",
    ][::std::mem::offset_of!(emacs_env_25, make_integer) - 128usize];
    [
        "Offset of field: emacs_env_25::extract_float",
    ][::std::mem::offset_of!(emacs_env_25, extract_float) - 136usize];
    [
        "Offset of field: emacs_env_25::make_float",
    ][::std::mem::offset_of!(emacs_env_25, make_float) - 144usize];
    [
        "Offset of field: emacs_env_25::copy_string_contents",
    ][::std::mem::offset_of!(emacs_env_25, copy_string_contents) - 152usize];
    [
        "Offset of field: emacs_env_25::make_string",
    ][::std::mem::offset_of!(emacs_env_25, make_string) - 160usize];
    [
        "Offset of field: emacs_env_25::make_user_ptr",
    ][::std::mem::offset_of!(emacs_env_25, make_user_ptr) - 168usize];
    [
        "Offset of field: emacs_env_25::get_user_ptr",
    ][::std::mem::offset_of!(emacs_env_25, get_user_ptr) - 176usize];
    [
        "Offset of field: emacs_env_25::set_user_ptr",
    ][::std::mem::offset_of!(emacs_env_25, set_user_ptr) - 184usize];
    [
        "Offset of field: emacs_env_25::get_user_finalizer",
    ][::std::mem::offset_of!(emacs_env_25, get_user_finalizer) - 192usize];
    [
        "Offset of field: emacs_env_25::set_user_finalizer",
    ][::std::mem::offset_of!(emacs_env_25, set_user_finalizer) - 200usize];
    [
        "Offset of field: emacs_env_25::vec_get",
    ][::std::mem::offset_of!(emacs_env_25, vec_get) - 208usize];
    [
        "Offset of field: emacs_env_25::vec_set",
    ][::std::mem::offset_of!(emacs_env_25, vec_set) - 216usize];
    [
        "Offset of field: emacs_env_25::vec_size",
    ][::std::mem::offset_of!(emacs_env_25, vec_size) - 224usize];
};
unsafe extern "C" {
    pub fn emacs_module_init(ert: *mut emacs_runtime) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct emacs_runtime_private {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct emacs_env_private {
    pub _address: u8,
}
